Translate GoldQuest
